k8s.yaml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "api-gateway"
    name: "api-gateway"
  spec:
    ports:
    - name: "7080"
      port: 7080
      targetPort: 8080
    selector:
      io.kompose.service: "api-gateway"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "category-service"
    name: "category-service"
  spec:
    ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
    selector:
      io.kompose.service: "category-service"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "discovery-server"
    name: "discovery-server"
  spec:
    ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
    selector:
      io.kompose.service: "discovery-server"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "kafka"
    name: "kafka"
  spec:
    ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
    selector:
      io.kompose.service: "kafka"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "nginx"
    name: "nginx"
  spec:
    ports:
    - name: "81"
      port: 81
      targetPort: 80
    selector:
      io.kompose.service: "nginx"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "payment-service"
    name: "payment-service"
  spec:
    ports:
    - name: "8089"
      port: 8089
      targetPort: 8089
    selector:
      io.kompose.service: "payment-service"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "postgres-db"
    name: "postgres-db"
  spec:
    ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
    selector:
      io.kompose.service: "postgres-db"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "redis-cache"
    name: "redis-cache"
  spec:
    ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
    selector:
      io.kompose.service: "redis-cache"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "stock-service"
    name: "stock-service"
  spec:
    ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
    selector:
      io.kompose.service: "stock-service"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "sync-service"
    name: "sync-service"
  spec:
    ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
    selector:
      io.kompose.service: "sync-service"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "user-service"
    name: "user-service"
  spec:
    ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    selector:
      io.kompose.service: "user-service"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Service"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "zookeeper"
    name: "zookeeper"
  spec:
    ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
    selector:
      io.kompose.service: "zookeeper"
  status:
    loadBalancer: {}
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "api-gateway"
    name: "api-gateway"
  spec:
    containers:
    - env:
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        value: "http://discovery-server:8761/eureka"
      - name: "JWT_SECRET"
        value: "UrutareIncStockM"
      - name: "LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_GATEWAY"
        value: "TRACE"
      - name: "LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_GATEWAY_ROUTE_ROUTEDEFINITIONROUTELOCATOR"
        value: "INFO"
      - name: "LOGGING_LEVEL_ROOT"
        value: "INFO"
      - name: "SERVER_PORT"
        value: "8080"
      - name: "SPRING_APPLICATION_NAME"
        value: "api-gateway"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_0_ID"
        value: "user-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_0_PREDICATES_0"
        value: "Path=/api/v1/user-service/**"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_0_URI"
        value: "lb://user-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_1_ID"
        value: "category-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_1_PREDICATES_0"
        value: "Path=/api/v1/category-service/**"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_1_URI"
        value: "lb://category-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_2_FILTERS_0"
        value: "SetPath=/"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_2_ID"
        value: "discovery-server"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_2_PREDICATES_0"
        value: "Path=/eureka/web"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_2_URI"
        value: "http://discovery-server:8761"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_3_ID"
        value: "discovery-server-static"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_3_PREDICATES_0"
        value: "Path=/eureka/**"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_3_URI"
        value: "http://discovery-server:8761"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_4_ID"
        value: "stock-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_4_PREDICATES_0"
        value: "Path=/api/v1/stock-service/**,/graphql"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_4_URI"
        value: "lb://stock-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_5_ID"
        value: "sync-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_5_PREDICATES_0"
        value: "Path=/api/v1/sync-service/**"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_5_URI"
        value: "lb://sync-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_6_ID"
        value: "payment-service"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_6_PREDICATES_0"
        value: "Path=/api/v1/payment-service/**"
      - name: "SPRING_CLOUD_GATEWAY_ROUTES_6_URI"
        value: "lb://payment-service"
      image: "api-gateway"
      name: "api-gateway"
      ports:
      - containerPort: 8080
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "category-service"
    name: "category-service"
  spec:
    containers:
    - env:
      - name: "CLOUDINARY_API_KEY"
        value: "958152517412848"
      - name: "CLOUDINARY_API_SECRET"
        value: "h2eAzwp1zYxSKXe6lqHka-kopSQ"
      - name: "CLOUDINARY_CLOUD_NAME"
        value: "http-voicetoworld-netlify-app"
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        value: "http://discovery-server:8761/eureka"
      - name: "EUREKA_INSTANCE_PREFER_IP_ADDRESS"
        value: "true"
      - name: "LOGGING_LEVEL_ORG_HIBERNATE_SQL"
        value: "debug"
      - name: "SERVER_PORT"
        value: "8082"
      - name: "SPRING_APPLICATION_NAME"
        value: "category-service"
      - name: "SPRING_DATASOURCE_PASSWORD"
        value: "admin123!"
      - name: "SPRING_DATASOURCE_URL"
        value: "jdbc:postgresql://postgres-db:5432/category_db"
      - name: "SPRING_DATASOURCE_USERNAME"
        value: "postgres"
      - name: "SPRING_JPA_HIBERNATE_DDL_AUTO"
        value: "update"
      - name: "SPRING_JPA_SHOW_SQL"
        value: "true"
      - name: "SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE"
        value: "10MB"
      - name: "SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE"
        value: "10MB"
      image: "category-service"
      name: "category-service"
      ports:
      - containerPort: 8082
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "discovery-server"
    name: "discovery-server"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "discovery-server"
    strategy: {}
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "discovery-server"
      spec:
        containers:
        - env:
          - name: "EUREKA_CLIENT_FETCH_REGISTRY"
            value: "false"
          - name: "EUREKA_CLIENT_REGISTER_WITH_EUREKA"
            value: "false"
          - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
            value: "http://discovery-server:8761/eureka"
          - name: "EUREKA_INSTANCE_HOSTNAME"
            value: "discovery-server"
          - name: "EUREKA_SERVER_LEASE_EXPIRATION_DURATION_IN_SECONDS"
            value: "60"
          - name: "EUREKA_SERVER_LEASE_RENEWAL_INTERVAL_IN_SECONDS"
            value: "15"
          - name: "SERVER_PORT"
            value: "8761"
          - name: "SPRING_APPLICATION_NAME"
            value: "discovery-server"
          image: "discovery-server"
          imagePullPolicy: ""
          name: "discovery-server"
          ports:
          - containerPort: 8761
          resources: {}
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "kafka"
    name: "kafka"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "kafka"
    strategy:
      type: "Recreate"
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/kafka-network: "true"
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "kafka"
      spec:
        containers:
        - env:
          - name: "ALLOW_PLAINTEXT_LISTENER"
            value: true
          - name: "KAFKA_CFG_LISTENERS"
            value: "PLAINTEXT://:9092"
          - name: "KAFKA_CFG_ZOOKEEPER_CONNECT"
            value: "zookeeper:2181"
          image: "bitnami/kafka:latest"
          imagePullPolicy: ""
          name: "kafka"
          ports:
          - containerPort: 9092
          resources: {}
          volumeMounts:
          - mountPath: "/bitnami/kafka/data"
            name: "kafka-data"
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes:
        - name: "kafka-data"
          persistentVolumeClaim:
            claimName: "kafka-data"
  status: {}
- apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.service: "kafka-data"
    name: "kafka-data"
  spec:
    accessModes:
    - "ReadWriteOnce"
    resources:
      requests:
        storage: "100Mi"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "kafka-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/kafka-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/kafka-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "nginx"
    name: "nginx"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "nginx"
    strategy:
      type: "Recreate"
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "nginx"
      spec:
        containers:
        - image: "nginx:latest"
          imagePullPolicy: ""
          name: "nginx"
          ports:
          - containerPort: 80
          resources: {}
          volumeMounts:
          - mountPath: "/etc/nginx/nginx.conf"
            name: "nginx-claim0"
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes:
        - name: "nginx-claim0"
          persistentVolumeClaim:
            claimName: "nginx-claim0"
  status: {}
- apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.service: "nginx-claim0"
    name: "nginx-claim0"
  spec:
    accessModes:
    - "ReadWriteOnce"
    resources:
      requests:
        storage: "100Mi"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "payment-service"
    name: "payment-service"
  spec:
    containers:
    - env:
      - name: "COMPONENT_ID"
        value: "4"
      - name: "DB_DATABASE"
        value: "payment_db"
      - name: "DB_HOSTNAME"
        valueFrom:
          configMapKeyRef:
            key: "DB_HOSTNAME"
            name: "env"
      - name: "DB_PASS"
        valueFrom:
          configMapKeyRef:
            key: "DB_PASS"
            name: "env"
      - name: "DB_PORT"
        valueFrom:
          configMapKeyRef:
            key: "DB_PORT"
            name: "env"
      - name: "DB_USER"
        valueFrom:
          configMapKeyRef:
            key: "DB_USER"
            name: "env"
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        valueFrom:
          configMapKeyRef:
            key: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
            name: "env"
      - name: "EUREKA_INSTANCE_PREFER_IP_ADDRESS"
        value: "true"
      - name: "HIBERNATE_ENABLE_LAZY_LOAD_NO_TRANS"
        value: "true"
      - name: "KAFKA_BROKER_URL"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_BROKER_URL"
            name: "env"
      - name: "KAFKA_GROUP_ID_PARKING_MANAGER"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_GROUP_ID_PARKING_MANAGER"
            name: "env"
      - name: "KAFKA_TOPIC_CHIRPSTACKAGENT_SENSORMESSAGE_RELEASED"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_TOPIC_CHIRPSTACKAGENT_SENSORMESSAGE_RELEASED"
            name: "env"
      - name: "KAFKA_TOPIC_INSPECTIONCLIENT_INSPECTION_REQUESTED"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_TOPIC_INSPECTIONCLIENT_INSPECTION_REQUESTED"
            name: "env"
      - name: "KAFKA_TOPIC_INSPECTIONMANAGER_INSPECTION_COMPLETED"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_TOPIC_INSPECTIONMANAGER_INSPECTION_COMPLETED"
            name: "env"
      - name: "KAFKA_TOPIC_PARTITION"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_TOPIC_PARTITION"
            name: "env"
      - name: "KAFKA_TOPIC_REPLICATION_FACTOR"
        valueFrom:
          configMapKeyRef:
            key: "KAFKA_TOPIC_REPLICATION_FACTOR"
            name: "env"
      - name: "REDIS_HOST"
        valueFrom:
          configMapKeyRef:
            key: "REDIS_HOST"
            name: "env"
      - name: "REDIS_PORT"
        valueFrom:
          configMapKeyRef:
            key: "REDIS_PORT"
            name: "env"
      - name: "SERVER_PORT"
        value: "8089"
      - name: "SPRING_APPLICATION_NAME"
        value: "payment-service"
      - name: "SPRING_MAIN_ALLOW_CIRCULAR_REFERENCES"
        value: "true"
      image: "thunderzeye/payment-service:latest"
      name: "payment-service"
      ports:
      - containerPort: 8089
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "postgres-db"
    name: "postgres-db"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "postgres-db"
    strategy:
      type: "Recreate"
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "postgres-db"
      spec:
        containers:
        - args:
          - "postgres"
          - "-c"
          - "max_connections=200"
          - "-c"
          - "timezone=Etc/UTC"
          - "-c"
          - "default_text_search_config=pg_catalog.english"
          image: "postgres"
          imagePullPolicy: ""
          name: "postgres-db"
          ports:
          - containerPort: 5432
          resources: {}
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: "postgres-data"
          - mountPath: "/docker-entrypoint-initdb.d"
            name: "postgres-db-claim1"
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes:
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"
        - name: "postgres-db-claim1"
          persistentVolumeClaim:
            claimName: "postgres-db-claim1"
  status: {}
- apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.service: "postgres-data"
    name: "postgres-data"
  spec:
    accessModes:
    - "ReadWriteOnce"
    resources:
      requests:
        storage: "100Mi"
  status: {}
- apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.service: "postgres-db-claim1"
    name: "postgres-db-claim1"
  spec:
    accessModes:
    - "ReadWriteOnce"
    resources:
      requests:
        storage: "100Mi"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "redis-cache"
    name: "redis-cache"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "redis-cache"
    strategy: {}
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "redis-cache"
      spec:
        containers:
        - env:
          - name: "ALLOW_EMPTY_PASSWORD"
            value: true
          image: "bitnami/redis:latest"
          imagePullPolicy: ""
          name: "redis"
          ports:
          - containerPort: 6379
          resources: {}
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "stock-service"
    name: "stock-service"
  spec:
    containers:
    - env:
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        value: "http://discovery-server:8761/eureka"
      - name: "LOGGING_LEVEL_ORG_HIBERNATE_SQL"
        value: "debug"
      - name: "SERVER_PORT"
        value: "8084"
      - name: "SPRING_APPLICATION_NAME"
        value: "stock-service"
      - name: "SPRING_DATASOURCE_PASSWORD"
        value: "admin123!"
      - name: "SPRING_DATASOURCE_URL"
        value: "jdbc:postgresql://postgres-db:5432/stock_db"
      - name: "SPRING_DATASOURCE_USERNAME"
        value: "postgres"
      - name: "SPRING_GRAPHQL_GRAPHIQL_ENABLED"
        value: "true"
      - name: "SPRING_GRAPHQL_GRAPHIQL_PATH"
        value: "/graphiql"
      - name: "SPRING_JPA_HIBERNATE_DDL_AUTO"
        value: "create-drop"
      - name: "SPRING_JPA_SHOW_SQL"
        value: "true"
      image: "stock-service"
      name: "stock-service"
      ports:
      - containerPort: 8084
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "sync-service"
    name: "sync-service"
  spec:
    containers:
    - env:
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        value: "http://discovery-server:8761/eureka"
      - name: "EUREKA_INSTANCE_PREFER_IP_ADDRESS"
        value: "true"
      - name: "LOGGING_LEVEL_ORG_HIBERNATE_SQL"
        value: "debug"
      - name: "SERVER_PORT"
        value: "8083"
      - name: "SPRING_APPLICATION_NAME"
        value: "sync-service"
      - name: "SPRING_DATASOURCE_PASSWORD"
        value: "admin123!"
      - name: "SPRING_DATASOURCE_URL"
        value: "jdbc:postgresql://postgres-db:5432/sync_db"
      - name: "SPRING_DATASOURCE_USERNAME"
        value: "postgres"
      - name: "SPRING_JPA_HIBERNATE_DDL_AUTO"
        value: "update"
      - name: "SPRING_JPA_SHOW_SQL"
        value: "true"
      - name: "SPRING_KAFKA_BOOTSTRAP_SERVERS"
        value: "kafka:9092"
      image: "sync-service"
      name: "sync-service"
      ports:
      - containerPort: 8083
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "v1"
  kind: "Pod"
  metadata:
    creationTimestamp: null
    labels:
      io.kompose.network/urutare-inc-network: "true"
      io.kompose.service: "user-service"
    name: "user-service"
  spec:
    containers:
    - env:
      - name: "EUREKA_CLIENT_SERVICEURL_DEFAULTZONE"
        value: "http://discovery-server:8761/eureka"
      - name: "EUREKA_INSTANCE_PREFER_IP_ADDRESS"
        value: "true"
      - name: "JWT_ACCESS_TOKEN_EXPIRATIONINMS"
        value: "86400000"
      - name: "JWT_REFRESH_TOKEN_EXPIRATIONINMS"
        value: "86400000"
      - name: "JWT_SECRET"
        value: "UrutareIncStockM"
      - name: "SERVER_PORT"
        value: "8081"
      - name: "SPRING_APPLICATION_NAME"
        value: "user-service"
      - name: "SPRING_DATASOURCE_PASSWORD"
        value: "admin123!"
      - name: "SPRING_DATASOURCE_URL"
        value: "jdbc:postgresql://postgres-db:5432/user_db"
      - name: "SPRING_DATASOURCE_USERNAME"
        value: "postgres"
      - name: "SPRING_JPA_HIBERNATE_DDL_AUTO"
        value: "update"
      - name: "SPRING_JPA_SHOW_SQL"
        value: "true"
      - name: "SPRING_MAIL_HOST"
        value: "smtp.gmail.com"
      - name: "SPRING_MAIL_PASSWORD"
        value: "mdibmzpbragmgufd"
      - name: "SPRING_MAIL_PORT"
        value: "587"
      - name: "SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH"
        value: "true"
      - name: "SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE"
        value: "true"
      - name: "SPRING_MAIL_USERNAME"
        value: "andelacohot25@gmail.com"
      - name: "STOCKM_API_SECRET_KEY"
        value: "UrutareIncStockM"
      - name: "STOCKM_BASE_URL"
        value: "http://api-gateway:8080"
      - name: "STOCKM_TOKEN_VALIDITY"
        value: "86400000"
      image: "user-service"
      name: "user-service"
      ports:
      - containerPort: 8081
      resources: {}
    restartPolicy: "OnFailure"
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
- apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    annotations:
      kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
        \ --out ./k8s"
      kompose.version: "1.21.0 (992df58d8)"
    creationTimestamp: null
    labels:
      io.kompose.service: "zookeeper"
    name: "zookeeper"
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: "zookeeper"
    strategy: {}
    template:
      metadata:
        annotations:
          kompose.cmd: "/snap/kompose/19/kompose-linux-amd64 convert --file docker-compose.yaml\
            \ --out ./k8s"
          kompose.version: "1.21.0 (992df58d8)"
        creationTimestamp: null
        labels:
          io.kompose.network/kafka-network: "true"
          io.kompose.network/urutare-inc-network: "true"
          io.kompose.service: "zookeeper"
      spec:
        containers:
        - env:
          - name: "ALLOW_ANONYMOUS_LOGIN"
            value: true
          image: "bitnami/zookeeper:latest"
          imagePullPolicy: ""
          name: "zookeeper"
          ports:
          - containerPort: 2181
          resources: {}
        restartPolicy: "Always"
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "kafka-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/kafka-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/kafka-network: "true"
- apiVersion: "extensions/v1beta1"
  kind: "NetworkPolicy"
  metadata:
    creationTimestamp: null
    name: "urutare-inc-network"
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/urutare-inc-network: "true"
    podSelector:
      matchLabels:
        io.kompose.network/urutare-inc-network: "true"
metadata: {}
